--- a/food/index.html
+++ b/food/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Choose My Food</title>
+    <title>Full - Start Bootstrap Template</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 
 </head>
 
-<body onload="getName()">
+<body>
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
         <div class="container">
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Eat What..</a>
+                <a class="navbar-brand" href="#">Hungry?!</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -65,9 +65,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h1>Are you Hungry?</h1>
-                <p id="name" class="lead"></p>
-                <button type="button" id="btnSearch" value="Search" onclick="GetFood(); randomize();" class="btn btn-lg btn-default btn-danger" href="#">Eat..</button>
+                <h1>Are you Hungry</h1>
+                <p class="lead">Click the button to decide what to eat!</p>
+                <button type="button" id="btnSearch" value="Search" onclick="GetValue();" class="btn btn-lg btn-default" href="#">Something Else..</button>
             </div>
         </div>
         <!-- /.row -->
@@ -77,6 +77,10 @@
 
     <div id="message" class="text-center"></div>
   
+
+
+
+
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
 
