--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Choose My Food</title>
+    <title>Find Some Fun</title>
+
+    <!-- viewport metatag enables rendering and touch zooming for mobile -->
+    <meta name="viewport" content="width=devide-width, initial-scale=1">
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
 
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
@@ -21,8 +29,8 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <!--<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>-->
+        <!--<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>-->
     <![endif]-->
 
 </head>
@@ -32,42 +40,75 @@
     <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header navbar-left">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Eat What..</a>
-            </div>
+            <!--<div class="navbar-header navbar-left">-->
+                <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">-->
+                    <!--<span class="sr-only">Toggle navigation</span>-->
+                    <!--<span class="icon-bar"></span>-->
+                    <!--<span class="icon-bar"></span>-->
+                    <!--<span class="icon-bar"></span>-->
+                <!--</button>-->
+                <!--<a class="navbar-brand" href="#">What I Like ...</a>-->
+            <!--</div>-->
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">Food</a>
-                    </li>
-                    <li>
-                        <a href="#">Good Food</a>
-                    </li>
-                    <li>
-                        <a href="#">Bad Food</a>
-                    </li>
-                </ul>
-            </div>
+
+            <!-- I took this from my Simply Me Page - Lab 02 -->
+            <!--<div class="navbar-header">-->
+
+                <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">-->
+
+                    <!--<span class="icon-bar"></span>-->
+                    <!--<span class="icon-bar"></span>-->
+                    <!--<span class="icon-bar"></span>-->
+
+                <!--</button>-->
+
+                <!--<a class="navbar-brand" href="#">WHAT I LIKE</a>-->
+
+            <!--</div>-->
+
+            <!--<div class="collapse navbar-collapse" id="myNavbar">-->
+
+                <!--<ul class="nav navbar-nav navbar-right">-->
+
+                    <!--<li><a href="#">things to do</a></li>-->
+                    <!--<li><a href="#">things to see</a></li>-->
+                    <!--<li><a href="#">things to eat</a></li>-->
+
+                <!--</ul>-->
+
+            <!--</div>-->
+
+            <!-- This was Kweku's -->
+            <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">-->
+                <!--<ul class="nav navbar-nav">-->
+                    <!--<li>-->
+                        <!--<a href="#">Things To Do</a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a href="#">Things To See</a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a href="#">Things To Eat</a>-->
+                    <!--</li>-->
+                <!--</ul>-->
+            <!--</div>-->
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
     </nav>
 
     
-     <!-- Page Content -->
+     <!-- Page Content - This was Kweku's, I added the jumbotron-->
+    <div class="jumbotron">
+        <h1 class="centerText">Are You Bored?</h1>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h1>Are you Hungry?</h1>
+                <!--<h1>Are You Bored?</h1>-->
+
                 <p id="name" class="lead"></p>
-                <button type="button" id="btnSearch" value="Search" onclick="GetFood(); randomize();" class="btn btn-lg btn-default btn-danger" href="#">Eat..</button>
+                <button type="button" id="btnSearch" value="Search" onclick="GetFood(); randomize();" class="btn btn-lg btn-default btn-danger" href="#">Entertain Me First ...</button>
             </div>
         </div>
         <!-- /.row -->
@@ -75,7 +116,7 @@
     <!-- /.container -->
 
 
-    <div id="message" class="text-center"></div>
+    <div id="message" class="text-center" href="#"></div>
   
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
