Function to put things in menu working.

--- a/Simply Me Copy.html
+++ b/Simply Me Copy.html
@@ -96,7 +96,7 @@
             <h1>Are You Bored?</h1>
 
             <p id="name" class="lead"></p>
-            <button type="button" id="btnSearch" value="Search" onclick="GetFood(); randomize();" class="btn btn-lg btn-warning-outline" href="#">Find Something To Do ...</button>
+            <button type="button" id="btnSearch" value="Search" onclick="GetToDo(); randomize();" class="btn btn-lg btn-warning-outline" href="#">Find Something To Do ...</button>
         </div>
     </div>
 
