--- a/FunThingsToDo.html
+++ b/FunThingsToDo.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- This file was based on my Simply Me project (based on W3Schools tutorial) with Find Something To Do button and methods called from button originally from Kweku's project, a lot has been reworked (see js files)-->
 <head>
     <title>Find Somthing Fun Bootstrap</title>
     <meta charset="UTF-8">
 
     <!-- viewport metatag enables rendering and touch zooming for mobile -->
     <!--<meta name="viewport" content="width=divide-width, initial-scale=1">-->
-
 
     <!-- jQuery and bootstrap and google api fonts -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -15,10 +15,10 @@
     <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <!-- My custom CSS -->
-    <link rel="stylesheet" type="text/css" href="Simply%20Me%20CSS.css">
+    <link rel="stylesheet" type="text/css" href="FunThingsToDoCSS.css">
 
     <!-- My javascript code HAS TO BE AT END OF BODY BECAUSE NOT ON READY FN -->
-    <!--<script src="js/food.js"></script>-->
+    <!--<script src="js/ToDoMethods.js"></script>-->
 </head>
 <body>
 
@@ -52,15 +52,17 @@
                 </li>
                 <li id="thingsToSee"><a href="#" class="dropdown-toggle" data-toggle = "dropdown">things to see</a>
                     <ul class = "dropdown-menu" id="seeThingsDropDown">
-                    </ul></li>
+                    </ul
+                ></li>
                 <li id="thingsToEat"><a href="#" class="dropdown-toggle" data-toggle = "dropdown">things to eat</a>
                     <ul class = "dropdown-menu" id="eatThingsDropDown">
-                    </ul></li>
+                    </ul>
+                </li>
 
             </ul>
 
 
-            <!-- from: http://www.tutorialspoint.com/bootstrap/bootstrap_navbar.htm-->
+            <!-- Based above menu on the following from: http://www.tutorialspoint.com/bootstrap/bootstrap_navbar.htm-->
             <!--<li class = "dropdown">-->
                 <!--<a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">-->
                     <!--Java-->
@@ -109,7 +111,6 @@
 
 <!-- BAR 1 -->
 <hr id="bar1"/>
-<!--</hr>-->
 
 <!-- MIDDLE DIV -->
 <div class="container-fluid bg2 text-center">
@@ -117,15 +118,10 @@
 </div>
 
 <!-- BAR 2 -->
-<hr id="bar2" class="container-fluid"/>
-<!--</hr>-->
+<hr id="bar2"/>
 
 <!-- BOTTOM DIV -->
 <div class="container-fluid bg3 text-center">
-    <h3 class="margin">AN H3</h3>
-    <div>
-        <p class="p3">JUST A GRAPH</p>
-    </div>
 
     <!-- ROW DIV -->
     <div class="row">
@@ -153,14 +149,9 @@
     <!-- END BOTTOM DIV -->
 </div>
 
-<!--&lt;!&ndash; jQuery &ndash;&gt;-->
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
-
-<!--&lt;!&ndash; Bootstrap Core JavaScript &ndash;&gt;-->
-<!--<script src="js/food.js" type="text/javascript"></script>-->
-
 <!-- My javascript code -->
-<script src="js/food.js"></script>
+<script src="js/ToDoMethods.js"></script>
+<script src="js/ToDoData.js"></script>
 
 </body>
 
