--- a/NotUsed/index.html
+++ b/NotUsed/index.html
@@ -24,7 +24,7 @@
     <!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
 
     <!-- Custom CSS -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -122,8 +122,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/food.js" type="text/javascript"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <!--<script src="js/ToDoMethods.js" type="text/javascript"></script>-->
+    <script src="../js/bootstrap.min.js"></script>
 
 </body>
 
