--- a/FunThingsToDo.html
+++ b/FunThingsToDo.html
@@ -13,8 +13,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <!--<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>-->
 
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZILioas3HVVdRo_R5GTja1ornfXt4zl8&libraries=places"></script>
 
     <!-- My custom CSS -->
     <link rel="stylesheet" type="text/css" href="FunThingsToDoCSS.css">
@@ -65,28 +66,6 @@
 
                 </ul>
 
-
-                <!-- Based above menu on the following from: http://www.tutorialspoint.com/bootstrap/bootstrap_navbar.htm-->
-                <!--<li class = "dropdown">-->
-                <!--<a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">-->
-                <!--Java-->
-                <!--<b class = "caret"></b>-->
-                <!--</a>-->
-
-                <!--<ul class = "dropdown-menu">-->
-                <!--<li><a href = "#">jmeter</a></li>-->
-                <!--<li><a href = "#">EJB</a></li>-->
-                <!--<li><a href = "#">Jasper Report</a></li>-->
-
-                <!--<li class = "divider"></li>-->
-                <!--<li><a href = "#">Separated link</a></li>-->
-
-                <!--<li class = "divider"></li>-->
-                <!--<li><a href = "#">One more separated link</a></li>-->
-                <!--</ul>-->
-
-                <!--</li>-->
-
             </div>
 
         </div>
@@ -108,11 +87,6 @@
             </div>
         </div>
 
-        <!--<h3 class="margin">Who Am I?</h3>-->
-        <!--&lt;!&ndash; img-circle class exists in bootstrap &ndash;&gt;-->
-        <!--<img src="hiker.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Hiker">-->
-        <!--<h3 class="margin">I'm a hiker.</h3>-->
-
     </div>
 
     <!-- BAR 1 -->
@@ -126,47 +100,53 @@
     <!-- BAR 2 -->
     <hr id="bar2"/>
 
-    <div id="map"></div>
-
     <!-- BOTTOM DIV -->
-    <div class="container-fluid bg3 text-center">
+    <!--<div class="container-fluid bg3 text-center">-->
 
-        <!-- ROW DIV -->
-        <div class="row">
+        <!--&lt;!&ndash; ROW DIV &ndash;&gt;-->
+        <!--<div class="row">-->
 
-            <!-- COLUMN 1 -->
-            <div class="col-sm-4">
-                <p class="p3">COL 1</p>
+            <!--&lt;!&ndash; COLUMN 1 &ndash;&gt;-->
+            <!--<div class="col-sm-4">-->
+                <!--<p class="p3">COL 1</p>-->
+                <!--<div class="map" id="map1"></div>-->
 
-            </div>
 
-            <!-- COLUMN 2 -->
-            <div class="col-sm-4">
-                <p class="p3">COL 2</p>
+            <!--</div>-->
 
-            </div>
+            <!--&lt;!&ndash; COLUMN 2 &ndash;&gt;-->
+            <!--<div class="col-sm-4">-->
+                <!--<p class="p3">COL 2</p>-->
+                <!--<div class="map" id="map2"></div>-->
 
-            <!-- COLUMN 3 -->
-            <div class="col-sm-4">
-                <p class="p3">COL 3</p>
 
-            </div>
-            <!-- END ROW -->
-        </div>
+            <!--</div>-->
+
+            <!--&lt;!&ndash; COLUMN 3 &ndash;&gt;-->
+            <!--<div class="col-sm-4">-->
+                <!--<p class="p3">COL 3</p>-->
+                <!--<div class="map" id="map3"></div>-->
+
+
+            <!--</div>-->
+            <!--&lt;!&ndash; END ROW &ndash;&gt;-->
+        <!--</div>-->
 
         <!-- END BOTTOM DIV -->
     </div>
 
-    <script>
+    <table class="table bg3">
+        <thead>
+        <tr>
+            <th></th>
+            <th>Fun Thing</th>
+            <th>Where To Find It</th>
+        </tr>
+        </thead>
+        <tbody id="addRows">
 
-        $('document').ready(function () {
-            google.maps.event.addDomListener(window, "load", initMap);
-        });
-
-        // Run the initialize function when the window has finished loading.
-        //
-        //    google.maps.event.addDomListener(window, "load", initialize);
-    </script>
+        </tbody>
+    </table>
 
     <!-- My javascript code -->
     <script src="js/ToDoMethods.js"></script>
