--- a/FunThingsToDo.html
+++ b/FunThingsToDo.html
@@ -28,27 +28,17 @@
 
     <!-- NAV BAR -->
     <nav class="navbar navbar-default">
-
         <div class="container">
-
             <div class="navbar-header">
-
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-
                 </button>
-
                 <a class="navbar-brand" href="#">WHAT I LIKE ...</a>
-
             </div>
-
             <div class="collapse navbar-collapse" id="myNavbar">
-
                 <ul class="nav navbar-nav navbar-right">
-
                     <li class="dropdown" id="thingsToDo">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">things to do</a>
                         <ul class="dropdown-menu" id="doThingsDropDown">
@@ -63,30 +53,23 @@
                         <ul class="dropdown-menu" id="eatThingsDropDown">
                         </ul>
                     </li>
-
                 </ul>
-
             </div>
-
         </div>
-
     </nav>
 
     <!-- TOP DIV -->
     <!-- container-fluid is a class in bootstrap, simplyBg is a class name to be used in CSS, text-center is also a class in bootstrap -->
     <div class="container-fluid bg1 text-center">
-
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h1>Are You Bored?</h1>
-
                 <p id="name" class="lead"></p>
                 <button type="button" id="btnSearch" value="Search" onclick="GetToDo(); randomize();"
                         class="btn btn-lg btn-warning-outline" href="#">Find Something To Do ...
                 </button>
             </div>
         </div>
-
     </div>
 
     <!-- BAR 1 -->
@@ -100,41 +83,7 @@
     <!-- BAR 2 -->
     <hr id="bar2"/>
 
-    <!-- BOTTOM DIV -->
-    <!--<div class="container-fluid bg3 text-center">-->
-
-        <!--&lt;!&ndash; ROW DIV &ndash;&gt;-->
-        <!--<div class="row">-->
-
-            <!--&lt;!&ndash; COLUMN 1 &ndash;&gt;-->
-            <!--<div class="col-sm-4">-->
-                <!--<p class="p3">COL 1</p>-->
-                <!--<div class="map" id="map1"></div>-->
-
-
-            <!--</div>-->
-
-            <!--&lt;!&ndash; COLUMN 2 &ndash;&gt;-->
-            <!--<div class="col-sm-4">-->
-                <!--<p class="p3">COL 2</p>-->
-                <!--<div class="map" id="map2"></div>-->
-
-
-            <!--</div>-->
-
-            <!--&lt;!&ndash; COLUMN 3 &ndash;&gt;-->
-            <!--<div class="col-sm-4">-->
-                <!--<p class="p3">COL 3</p>-->
-                <!--<div class="map" id="map3"></div>-->
-
-
-            <!--</div>-->
-            <!--&lt;!&ndash; END ROW &ndash;&gt;-->
-        <!--</div>-->
-
-        <!-- END BOTTOM DIV -->
-    </div>
-
+    <!-- TABLE -->
     <table class="table bg3">
         <thead>
         <tr>
@@ -154,8 +103,8 @@
 
 </body>
 
-<!-- FOOTER -->
-<!--<footer class="container-fluid bg4 text-center">-->
-<!--<p>Bootstrap Theme Made By Margaret Elkins with help from <a href="http://www.w3schools.com">www.w3schools.com</a></p>-->
-<!--</footer>-->
+ <!--FOOTER-->
+<footer class="container-fluid bg4 text-center">
+<p>Created by Margaret Elkins for your enjoyment.</p>
+</footer>
 </html>
