--- a/FunThingsToDo.html
+++ b/FunThingsToDo.html
@@ -13,14 +13,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <!--<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>-->
 
+    <!-- google maps api with my dev key -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZILioas3HVVdRo_R5GTja1ornfXt4zl8&libraries=places"></script>
 
     <!-- My custom CSS -->
     <link rel="stylesheet" type="text/css" href="FunThingsToDoCSS.css">
 
-    <!-- My javascript code HAS TO BE AT END OF BODY BECAUSE NOT ON READY FN -->
+    <!-- My javascript code HAS TO BE AT END OF BODY BECAUSE THE IS NO READY FN -->
     <!--<script src="js/ToDoMethods.js"></script>-->
 </head>
 
@@ -74,7 +74,7 @@
     <!-- BAR 1 -->
     <hr id="bar1"/>
 
-    <!-- MIDDLE DIV -->
+    <!-- MIDDLE DIV where the messages will be -->
     <div class="container-fluid bg2 text-center">
         <div id="message" class="text-center" href="#"></div>
     </div>
