testing program on git web

--- a/FunThingsToDo.html
+++ b/FunThingsToDo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <!-- This file was based on my Simply Me project (based on W3Schools tutorial) with Find Something To Do button and methods called from button originally from Kweku's project, a lot has been reworked (see js files)-->
 <head>
-    <title>Find Somthing Fun Bootstrap - For A Change</title>
+    <title>Find Somthing Fun Bootstrap - Fix</title>
     <meta charset="UTF-8">
 
     <!-- viewport metatag enables rendering and touch zooming for mobile -->
