testing program on git web

--- a/NotUsed/FunThingsToDo.html
+++ b/NotUsed/FunThingsToDo.html
@@ -18,7 +18,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZILioas3HVVdRo_R5GTja1ornfXt4zl8&libraries=places"></script>
 
     <!-- My custom CSS -->
-    <link rel="stylesheet" type="text/css" href="FunThingsToDoCSS.css">
+    <link rel="stylesheet" type="text/css" href="../css/FunThingsToDoCSS.css">
 
     <!-- My javascript code HAS TO BE AT END OF BODY BECAUSE THE IS NO READY FN -->
     <!--<script src="js/ToDoMethods.js"></script>-->
@@ -97,8 +97,8 @@
     </table>
 
     <!-- My javascript code -->
-    <script src="Scripts/toDoMethods.js"></script>
-    <script src="Scripts/toDoData.js"></script>
+    <script src="../js/toDoMethods.js"></script>
+    <script src="../js/toDoData.js"></script>
 
 </body>
 
