--- a/NotUsed/index.html
+++ b/NotUsed/index.html
@@ -123,7 +123,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <!--<script src="js/ToDoMethods.js" type="text/javascript"></script>-->
-    <script src="../Scripts/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
 </body>
 
