--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 </table>
 
 <!-- My javascript code -->
-<script src="Scripts/toDoMethods.js"></script>
-<script src="Scripts/toDoData.js"></script>
+<script src="js/toDoMethods.js"></script>
+<script src="js/toDoData.js"></script>
 
 </body>
 
