--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <!-- jQuery and bootstrap and google api fonts -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>-->
+    <!--<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
     <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <!-- google maps api with my dev key -->
@@ -99,6 +99,8 @@
 <!-- My javascript code -->
 <script src="js/toDoMethods.js"></script>
 <script src="js/toDoData.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 </body>
 
