--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <!-- google maps api with my dev key -->
-    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZILioas3HVVdRo_R5GTja1ornfXt4zl8&libraries=places"></script>-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZILioas3HVVdRo_R5GTja1ornfXt4zl8&libraries=places"></script>
 
     <!-- My custom CSS -->
     <link rel="stylesheet" type="text/css" href="css/FunThingsToDoCSS.css">
