--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <!-- google maps api with my dev key -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZILioas3HVVdRo_R5GTja1ornfXt4zl8&libraries=places"></script>
+    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZILioas3HVVdRo_R5GTja1ornfXt4zl8&libraries=places"></script>-->
 
     <!-- My custom CSS -->
     <link rel="stylesheet" type="text/css" href="css/FunThingsToDoCSS.css">
@@ -98,6 +98,7 @@
 
 
 <!-- My javascript code -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZILioas3HVVdRo_R5GTja1ornfXt4zl8&libraries=places"></script>
 <script src="js/toDoMethods.js"></script>
 <script src="js/toDoData.js"></script>
 
@@ -106,7 +107,7 @@
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 <!-- google maps api with my dev key -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZILioas3HVVdRo_R5GTja1ornfXt4zl8&libraries=places"></script>
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZILioas3HVVdRo_R5GTja1ornfXt4zl8&libraries=places"></script>-->
 
 
 </body>
