Fixed marker content showing up under wrong headling on left. Need to fix marker content showing up over wrong map.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </tr>
     </thead>
     <tbody id="addRows">
-
+        <!-- Table will be inserted here during user interaction -->
     </tbody>
 </table>
 
