Made it all work!!

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
         <div class="col-lg-12 text-center">
             <h1>Are You Bored?</h1>
             <p id="name" class="lead"></p>
-            <button type="button" id="btnSearch" value="Search" onclick="GetToDo(); randomize();"
-                    class="btn btn-lg btn-warning-outline" href="#">Find Something To Do ...
+            <button type="button" id="btnSearch" value="Search" onclick="GetToDo(); randomize();"class="btn btn-lg btn-warning-outline" href="#">Find Something To Do ...
             </button>
         </div>
     </div>
